DelegateController for handling Salmon messages and Unit tests

--- a/blogracy-web/src/main/config/blogracyUser.properties
+++ b/blogracy-web/src/main/config/blogracyUser.properties
@@ -20,8 +20,6 @@
 # THE SOFTWARE.
 #
 
-blogracy.user.user = W3W7TSICZWSCUK4R7C7HMQ633GRL6YPU mic
-blogracy.user.friends.1 = BLANNBXOHECW2MWHVN5AU5X4KCDDIQJZ rik0
-blogracy.user.friends.2 = QG3PKBZU2F6CZ7AWBT6AP3BRXG6NFKI6 uno
-blogracy.user.friends.3 = GDG7OPX7FJMWV74IYR2VMDPIHW5KPU2G due
-blogracy.user.friends.4 = CGVGVXDXGSBLYS4VX75S5E3S7PDDCBAZ tre
+blogracy.user.user = 7PAEA2BZXQYZHXXHXWMUSCOVGCT46SLA vittoso
+blogracy.user.friends.1 = TUYL2FX4NQN7J7T36LLTTL5DCFHU6SWN vittoso2
+blogracy.user.delegates.1 = TUYL2FX4NQN7J7T36LLTTL5DCFHU6SWN vittoso2
