no i2p by default

--- a/blogracy-vuze/src/main/plugins/blogracy/vuze.properties
+++ b/blogracy-vuze/src/main/plugins/blogracy/vuze.properties
@@ -3,6 +3,7 @@ Enable.SOCKS = 1
 Network\ Selection\ Default.I2P = 1
 Plugin.azneti2p.proxy_port = 20654
 Plugin.azneti2p.i2p_location = i2p
+Plugin.azneti2p.enable = 1
 Proxy.Data.Enable = 1
 Proxy.Data.SOCKS.inform = 0
 Proxy.Data.Same = 1
